# repetitiveness

./: CMakeLists.txt  README.md
cmakemodules/: FindSDSL.cmake
src/: main.cpp
